Gnome: Fix unreadable text in calendar events

--- a/gtk-3.0/gtk-dark.css
+++ b/gtk-3.0/gtk-dark.css
@@ -5524,6 +5524,16 @@ headerbar .nautilus-window .path-bar-box .subtitle {
   #gnc-id-main-window .arrow.button.toggle:hover {
     color: #9bbfbf; }
 
+/*******************
+ * Calendar events *
+********************/
+.color-light.timed label {
+  color: #E0E0E0;
+  opacity: 1; }
+.week-view .color-light.timed label, .color-light label, .year-view .color-light:not(.timed) label {
+  color: #171a1f;
+  opacity: 1; }
+
 /********
  * Gala *
  *******/
